# vuers

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  justfile  package.json  pnpm-lock.yaml  setup.js
crates/libvue_compiler_sfc/: Cargo.toml  build.rs
crates/libvue_compiler_sfc/examples/: bench_sfc.rs  compile_sfc.rs  demo.rs
crates/libvue_compiler_sfc/examples/fixtures/: App.vue
crates/libvue_compiler_sfc/ffi/cpp/: runtime.h  runtime_internal.h
crates/libvue_compiler_sfc/src/: compiler.rs  lib.rs  util.rs
crates/libvue_compiler_sfc/src/bindings/: blocks.rs  compile.rs  compiler.rs  error.rs  handle.rs  mod.rs  parse.rs  types.rs
crates/libvue_compiler_sfc/src/ffi/: mod.rs  raw.rs
crates/libvue_compiler_sfc/src/tests/: mod.rs  snapshot_tests.rs
crates/libvue_compiler_sfc/src/tests/snapshots/: libvue_compiler_sfc__tests__snapshot_tests__attribute_formats.snap  libvue_compiler_sfc__tests__snapshot_tests__css_v_bind_variables.snap  libvue_compiler_sfc__tests__snapshot_tests__dual_scripts.snap  libvue_compiler_sfc__tests__snapshot_tests__empty_blocks.snap  libvue_compiler_sfc__tests__snapshot_tests__multiple_styles.snap  libvue_compiler_sfc__tests__snapshot_tests__slotted_styles.snap
crates/libvue_compiler_sfc/src/types/: attr_value.rs  custom_block.rs  descriptor.rs  handle.rs  import_binding.rs  mod.rs  parse_output.rs  script_block.rs  script_output.rs  source_location.rs  style_block.rs  style_output.rs  template_block.rs  template_output.rs
examples/: bench_sfc.rs  compile_sfc.rs  demo.rs
scripts/: benchmark-node.mjs  (+3 more)
(+48 files in other folders)
