[package]
name = "libvue_compiler_sfc"
version = "0.1.0"
edition = "2021"

[lib]
name = "libvue_compiler_sfc"
path = "src/lib.rs"

[dependencies]
lib_vue_compiler_sfc_sys = { path = "../lib_vue_compiler_sfc_sys" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "compile_sfc"
path = "examples/compile_sfc.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "bench_sfc"
path = "examples/bench_sfc.rs"

[dev-dependencies]
insta = "1.46.0"
